--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme             : "TaDi2S/minimal-mistakes"
 remote_theme             : "mmistakes/minimal-mistakes@4.26.2"
-minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "default" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "ko-KR"
@@ -334,3 +334,5 @@ defaults:
     values:
       layout: single
       author_profile: true
+      sidebar:                  # 추가한 부분
+        nav: "sidebar-category" # 추가한 부분
