--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,24 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
-    url: https://tadi2s.github.io/tadi2s-s-blog/about/
+    url: https://tadi2s.github.io/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+sidebar-category:
+- title: "카테고리"
+  children:
+    - title: "블로그"
+      url: "/blog"
+    - title: "카테고리B"
+    - title: "카테고리C"
+- title: "git 관련"
+  children:
+    - title: "git 블로그"
+    children:
+      - title: "sadasd"
+- title: "개발관련"
