--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "개발자"
 breadcrumbs              : # true, false (default)
-words_per_minute         : 200
+words_per_minute         : 120 # 분당 읽는 단어 수 -> 해당값으로 포스팅된 글의 읽는데 소요시간을 표시해준다.
 enable_copy_code_button  : # true, false (default)
 copyright                : # "copyright" name, defaults to site.title
 copyright_url            : # "copyright" URL, defaults to site.url
