--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,6 @@ sidebar-category:
       url: "/javaInfo"
     - title: "Python"
       url: "/pythonInfo"
-    - title: "기타 코딩 개념"
+    - title: "기타 개발 개념"
       url: "/etcInfo"
 - title: "프로젝트"
